2016-01-26  Per Bothner  <per@bothner.com>

	* configure.ac: Fix case when --with-java-source is defaulted.

2015-12-21  Per Bothner  <per@bothner.com>

	* configure.ac: Handle mapping from JAVA_SOURCE to PreProcess
	token at configure time, rather than make time.
	* Makefile.am: Simplify Prepocess handling.
	(JAVA_PREPROCESS_OPTIONS): New variable - selector to PreProcess.
	(selected-java-source): Compare JAVA_PREPROCESS_OPTIONS rather
	than solely JAVA_SOURCE.

	* configure.ac: Move some logic to new file ...
	* config.classpath: ... so it can be shared with bin/configure.ac.

2015-10-28  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.1.1.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

2015-10-26  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 2.1.
	* bin/configure.in (AC_INIT): Likewise.
	* build.xml (version.release): Likewise.

2015-09-20  Per Bothner  <per@bothner.com>

	* configure.ac: Fix to avoid bogus calls to chmod.

2015-08-10  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (lib-scm-classes): Add rnrs/arithmetic/bitwise.scm.

2015-07-31  Per Bothner  <per@bothner.com>

	* Makefile.am: Many subclasses of gnu.lists.SimpleVector are now
	auto-generated from PrimVector.template.  Do so.

2015-06-03  Per Bothner  <per@bothner.com>

	* build.xml (kawa.sh): Add dependency on build-settings.
	(clean-build): Remove bin/kawa.sh.

2015-06-02  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (-maybe-select-java{2,4,5,6,7}): Use both "if" and
	"unless" attributes so that only one of the select-java* targets
	gets called.

2015-05-19  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (has-java{2,4,5,6,7,8}): Move out of
	-select-java-non-android up to top level so that they are defined
	in the initial Ant environment.
	(java-classes): Add q2.

2015-05-13  Per Bothner  <per@bothner.com>

	* compile: New file, from gnulib, used by autoconf.
