@@ -564,6 +564,9 @@ endif
 if WITH_SWT
 java_sources += $(GNU_KAWA_SWTVIEWS_JSOURCES)
 endif
+if WITH_JLINE2
+java_sources += kawa/io/JLine2InPort.java
+endif
 if ENABLE_XML
 java_sources += $(GNU_XML_JSOURCES) $(GNU_KAWA_XML_JSOURCES)
 if WITH_SAX2
